--- a/AppEducation/AppEducation/Views/RoleAdmin/Create.cshtml
+++ b/AppEducation/AppEducation/Views/RoleAdmin/Create.cshtml
@@ -1,8 +1,9 @@
 @model string
 @{
-    ViewData["Title"] = "Role Admin";
     Layout = "_LayoutAdmin";
+    ViewData["Title"] = "Role Admin";
 }
+
 <div class="bg-primary m-1 p-1"><h4>Create Role</h4></div>
 <div asp-validation-summary="All" class="text-danger"></div>
 <form asp-action="Create" method="post">
@@ -13,3 +14,5 @@
     <button type="submit" class="btn btn-primary">Create</button>
     <a asp-action="Index" class="btn btn-secondary">Cancel</a>
 </form>
+
+</div>
