--- a/AppEducation/AppEducation/wwwroot/pages/home/css/style.css
+++ b/AppEducation/AppEducation/wwwroot/pages/home/css/style.css
@@ -30,7 +30,8 @@ a:focus {
 }
 img {
     max-width: 100%;
-    height: auto
+    height: auto;
+    padding-top: 40px;
 }
 .fix {
     overflow: hidden
