--- a/AppEducation/AppEducation/Views/Account/Register.cshtml
+++ b/AppEducation/AppEducation/Views/Account/Register.cshtml
@@ -86,7 +86,7 @@
                         </div>
                         <div class="input-group">
                             <label class="label">Job</label>
-                            <div class="rs-select2 js-select-simple select--no-search">
+                            <div class="rs-select2 js-select-simple select--no-search" stype="margin-left:10px">
                                 <select asp-for="Job" >
                                     <option disabled selected>Choose option</option>
                                     <option value="Student">Student</option>
