--- a/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_LayoutPresent.cshtml";
 }
+@model Classes
 <div id="topica-vcr">
     <div class="AtlaskitThemeProvider__LegacyReset-sc-431dkp-0 tOoji">
         <div class="wrapper">
@@ -89,6 +90,7 @@
                         <div class="vcrx-item-box vcrx-webcam">
                             <div class="box-webcam box-list">
                                 <div class="video-cam">
+                                    <video id="camera" autoplay="autoplay"></video>
                                 </div>
                             </div>
                         </div>
@@ -101,11 +103,14 @@
                             <div class="box-media-control">
                                 <div class="group-media-control">
                                     <div class="media-control">
-                                        <div title="Mic" class="mic-control media-box">
+                                        <div title="Cam" id="cam" class="mic-control media-box">
+                                            <i class="fa fa-microphone" aria-hidden="true"> </i>
+                                        </div>
+                                        <div title="Mic" id="mic" class="mic-control media-box">
                                             <i class="fa fa-microphone" aria-hidden="true"> </i>
                                         </div>
 
-                                        <div title="Loa" class="volumn-control media-box">
+                                        <div title="Loa" id="scrn" class="volumn-control media-box">
                                             <i class="fa fa-music" aria-hidden="true"> </i>
                                         </div>
                                     </div>
@@ -171,6 +176,7 @@
                                             </p>
                                         </div>
                                         <div class="vcr-slide-box">
+                                            <video id="screen" autoplay="autoplay"></video>
                                         </div>
                                     </div>
                                 </div>
@@ -365,6 +371,7 @@
 <script>
     const username = "@User.Identity.Name";
     console.log(username);
+    const classid = "@Model.ClassID";
 </script>
 <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
 <script src="~/js/ConnectionHub.js"></script>
